--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     position: fixed;
+    z-index: 1;
     border-bottom: rgb(120, 119, 119) solid 1px;
     width: 80%;
     
